Add debug/dev button to go back 1 step in conversation-history

--- a/interfaces/PA-App/src/app/personal/personal.page.html
+++ b/interfaces/PA-App/src/app/personal/personal.page.html
@@ -27,6 +27,13 @@
       <ion-icon name="nuclear" size="small" slot="icon-only"></ion-icon>
     </ion-button>
 
+    <ion-button color="danger" size="small" fill="outline"
+                title="Step back in Conversation History"
+                (click)="conversationService.debugUndoLastStep()"
+    >
+      <ion-icon name="undo" size="small" slot="icon-only"></ion-icon>
+    </ion-button>
+
     <ion-button color="danger" size="small"
                 title="Clear conversation"
                 (click)="this.container.clear()"
