Refactor+support init-from-history in "store-credential"-component

--- a/interfaces/PA-App/src/app/personal-components/store-credential/store-credential.component.html
+++ b/interfaces/PA-App/src/app/personal-components/store-credential/store-credential.component.html
@@ -1,11 +1,9 @@
 <section>
-  <dialogue-turn [actor]="ngo"
+  <dialogue-turn [actor]="currentProgram?.ngo"
                  *ngIf="credentialReceived"
                  [isSpoken]="credentialReceived"
   >
-    <p>
-      {{ 'personal.store-credential.done'|translate }}
-    </p>
+    <p [innerHTML]="'personal.store-credential.done'|translate:{ ngo: currentProgram?.ngo }"></p>
   </dialogue-turn>
   <br>
   <br>
@@ -27,4 +25,17 @@
       {{ 'personal.store-credential.stored'|translate }}
     </p>
   </dialogue-turn>
+
+  <div *ngIf="isDebug && !isDisabled"
+       class="ion-text-center ion-padding"
+  >
+    <ion-button type="button"
+                fill="outline"
+                color="tertiary"
+                *ngIf="!credentialReceived || !credentialStored"
+                (click)="credentialReceived=true;credentialStored=true;complete()"
+    >Receive+Store Credential</ion-button>
+  </div>
+
+
 </section>
