AB#1068 added program-detail page

--- a/interfaces/HO-Portal/src/app/app.component.html
+++ b/interfaces/HO-Portal/src/app/app.component.html
@@ -18,7 +18,7 @@
             <ion-item [routerDirection]="'root'" routerLink="/programs">
               <ion-icon slot="start" name="list"></ion-icon>
               <ion-label>
-                {{ 'PROGRAMS'|translate }}
+                {{ 'page.programs.PROGRAMS'|translate }}
               </ion-label>
             </ion-item>
           </ion-menu-toggle>
