AB#1069 open details when clicking program in list

--- a/interfaces/HO-Portal/src/app/programs/program-list/program-list.component.html
+++ b/interfaces/HO-Portal/src/app/programs/program-list/program-list.component.html
@@ -13,6 +13,9 @@
   <ion-list class="ion-padding">
     <ion-item *ngFor="let item of items">
       <ion-label position="stacked">
+        <a [routerLink]="['/program', item.id]">
+          {{ item.title.en }}
+        </a>
       </ion-label>
       <ion-note>
         {{ item.description.en }}
