AB#1071 show program details on page

--- a/interfaces/HO-Portal/src/app/programs/program-details/program-details.component.html
+++ b/interfaces/HO-Portal/src/app/programs/program-details/program-details.component.html
@@ -8,3 +8,10 @@
     </ion-title>
   </ion-toolbar>
 </ion-header>
+
+
+<ion-content>
+  <ion-list *ngFor="let item of program" class="ion-padding">
+    {{item.key}}: {{item.value}}
+  </ion-list>
+</ion-content>
