--- a/interfaces/HO-Portal/src/app/programs/program-details/program-details.component.html
+++ b/interfaces/HO-Portal/src/app/programs/program-details/program-details.component.html
@@ -16,7 +16,12 @@
 
 
 <ion-content>
-  <ion-list *ngFor="let item of program" class="ion-padding">
-    {{item.key}}: {{item.value}}
+  <ion-list *ngFor="let item of programArray" class="ion-padding">
+      <ion-item *ngIf="!item.isArray">
+          <ion-label><strong>{{item.key}}:</strong> <pre>{{item.value | json}}</pre></ion-label>
+        </ion-item>
+      <ion-item *ngIf="item.isArray">
+        <ion-label><strong>{{item.key}}:</strong> <pre>{{item.value | json}}</pre></ion-label>
+      </ion-item>
   </ion-list>
 </ion-content>
