Handle Authentication-state in PaData-service ONLY

--- a/interfaces/PA-App/src/app/tabs/tabs.page.html
+++ b/interfaces/PA-App/src/app/tabs/tabs.page.html
@@ -18,7 +18,8 @@
 
     <ion-fab-button *ngIf="!useLocalStorage"
                     size="small"
-                    [color]="accountBtnColor"
+                    [color]="isLoggedIn ? 'success' : 'medium'"
+                    [disabled]="!isLoggedIn"
                     (click)="openUserMenu($event)"
     >
       <ion-icon name="person" size="large"></ion-icon>
