--- a/interfaces/HO-Portal/src/app/app.component.html
+++ b/interfaces/HO-Portal/src/app/app.component.html
@@ -1,6 +1,6 @@
 <ion-app>
-  <ion-split-pane>
-    <ion-menu>
+  <ion-split-pane contentId="main">
+    <ion-menu contentId="main">
       <ion-header>
         <ion-toolbar>
           <ion-title>{{ 'MENU'|translate }}</ion-title>
@@ -9,13 +9,17 @@
       <ion-content>
         <ion-list>
           <ion-menu-toggle auto-hide="false">
-            <ion-item [routerDirection]="'root'" routerLink="/home">
+            <ion-item routerLink="/home"
+                      routerDirection="root"
+            >
               <ion-icon slot="start" name="home"></ion-icon>
               <ion-label>
                 {{ 'HOME'|translate }}
               </ion-label>
             </ion-item>
-            <ion-item [routerDirection]="'root'" routerLink="/programs">
+            <ion-item routerLink="/programs"
+                      routerDirection="root"
+            >
               <ion-icon slot="start" name="list"></ion-icon>
               <ion-label>
                 {{ 'page.programs.program-list.title'|translate }}
@@ -25,7 +29,9 @@
         </ion-list>
 
         <div style="position: absolute; bottom: 0; left: 0; right: 0; top: auto;">
-          <ion-segment (ionChange)="switchLanguage($event)" [value]="currentLanguage">
+          <ion-segment (ionChange)="switchLanguage($event)"
+                       [value]="currentLanguage"
+          >
             <ion-segment-button value="nl">
               <ion-label>NL</ion-label>
             </ion-segment-button>
@@ -37,6 +43,6 @@
 
       </ion-content>
     </ion-menu>
-    <ion-router-outlet main></ion-router-outlet>
+    <ion-router-outlet id="main"></ion-router-outlet>
   </ion-split-pane>
 </ion-app>
