Stay logged-in as long as you have a token

--- a/interfaces/HO-Portal/src/app/login/login.page.html
+++ b/interfaces/HO-Portal/src/app/login/login.page.html
@@ -14,24 +14,24 @@
             <ion-item>
               <ion-label position="stacked">{{ 'page.login.form.email.label'|translate }}</ion-label>
               <ion-input type="email"
-                          name="email"
-                          inputmode="email"
-                          autocomplete="username email"
-                          autocapitalize="off"
-                          autofocus="true"
-                          clearInput="true"
-                          required
+                         name="email"
+                         inputmode="email"
+                         autocomplete="username email"
+                         autocapitalize="off"
+                         autofocus="true"
+                         clearInput="true"
+                         required
               ></ion-input>
             </ion-item>
             <ion-item>
               <ion-label position="stacked">{{ 'page.login.form.password.label'|translate }}</ion-label>
               <ion-input type="password"
-                          name="password"
-                          autocomplete="current-password"
-                          autocapitalize="off"
-                          clearInput="true"
-                          clearOnEdit="false"
-                          required
+                         name="password"
+                         autocomplete="current-password"
+                         autocapitalize="off"
+                         clearInput="false"
+                         clearOnEdit="false"
+                         required
               ></ion-input>
             </ion-item>
 
