--- a/interfaces/HO-Portal/src/app/programs/program-list/program-list.component.html
+++ b/interfaces/HO-Portal/src/app/programs/program-list/program-list.component.html
@@ -11,18 +11,22 @@
 
 <ion-content>
   <ion-list class="ion-padding">
-    <ion-item *ngFor="let item of items">
-      <ion-label position="stacked">
-        <a [routerLink]="['/program', item.id]">
-          {{ item.title.en }}
-        </a>
+    <ion-item *ngFor="let item of items"
+              detail="true"
+              button="true"
+              [routerLink]="'/program/' + item.id"
+    >
+      <ion-label>
+        {{ item.title.en }}
+        <br>
+        <ion-note>
+          {{ item.description.en }}
+        </ion-note>
+        <ion-note class="ion-float-end ion-padding-end"
+        >
+          {{ item.updated|date:"dd-MM-y - H:m" }}
+        </ion-note>
       </ion-label>
-      <ion-note>
-        {{ item.description.en }}
-      </ion-note>
-      <ion-note slot="end">
-        {{ item.updated|date:"dd-MM-y - H:m" }}
-      </ion-note>
     </ion-item>
   </ion-list>
 </ion-content>
