--- a/interfaces/HO-Portal/src/app/help/help.page.html
+++ b/interfaces/HO-Portal/src/app/help/help.page.html
@@ -4,10 +4,15 @@
       <ion-menu-button></ion-menu-button>
     </ion-buttons>
     <ion-title>
-      {{ 'page.home.pageTitle'|translate }}
+      {{ 'page.help.pageTitle'|translate }}
     </ion-title>
   </ion-toolbar>
 </ion-header>
 
 <ion-content>
+  <div class="ion-padding">
+    <h2>{{ 'page.help.user-manual'|translate }}</h2>
+    <p>{{ 'page.help.user-manual-content'|translate }}</p>
+  </div>
+  
 </ion-content>
