--- a/interfaces/HO-Portal/src/app/programs/program-list/program-list.component.html
+++ b/interfaces/HO-Portal/src/app/programs/program-list/program-list.component.html
@@ -4,7 +4,7 @@
       <ion-menu-button></ion-menu-button>
     </ion-buttons>
     <ion-title>
-      {{ 'page.programs.program-list.title'|translate }}
+      {{ 'page.programs.program-list.pageTitle'|translate }}
     </ion-title>
   </ion-toolbar>
 </ion-header>
