AB#1089 HO-portal comments PR#376

--- a/interfaces/HO-Portal/src/app/programs/program-details/program-details.component.html
+++ b/interfaces/HO-Portal/src/app/programs/program-details/program-details.component.html
@@ -21,7 +21,7 @@
 
 <ion-content>
   <ion-item>
-    <ion-button (click)="openModal()">
+    <ion-button (click)="openProgramJson()">
       {{ 'page.programs.program-details.more'|translate }}
     </ion-button>
   </ion-item>
