--- a/interfaces/PA-App/src/app/personal-components/enroll-in-program/enroll-in-program.component.html
+++ b/interfaces/PA-App/src/app/personal-components/enroll-in-program/enroll-in-program.component.html
@@ -16,7 +16,7 @@
   <dialogue-turn actor="self"
                  *ngFor="let question of questions; let i=index; first as isFirst;"
                 [isConnected]="!isFirst"
-                [isSpoken]="isFirst || hasAnswered"
+                [isSpoken]="isFirst || hasAnswered || changedAnswers"
   >
     <ion-label>
       {{ question.label }}
