--- a/interfaces/PA-App/src/app/personal/personal.page.html
+++ b/interfaces/PA-App/src/app/personal/personal.page.html
@@ -35,10 +35,10 @@
     </ion-button>
 
     <ion-button color="danger" size="small"
-                title="Clear conversation"
-                (click)="this.container.clear()"
+                title="Fix history"
+                (click)="conversationService.debugFillHistory()"
     >
-      <ion-icon name="trash" size="small" slot="icon-only"></ion-icon>
+      <ion-icon name="color-fill" size="small" slot="icon-only"></ion-icon>
     </ion-button>
 
     <select name="debugSections"
@@ -63,6 +63,14 @@
     >
       <ion-icon name="arrow-round-down" size="small" slot="icon-only"></ion-icon>
     </ion-button>
+
+    <ion-button color="tertiary" size="small" fill="clear"
+                title="Clear conversation"
+                (click)="this.container.clear()"
+    >
+      <ion-icon name="trash" size="small" slot="icon-only"></ion-icon>
+    </ion-button>
+
   </ion-row>
 </div>
 
