PA:Added delete user to interface and some error handling AB#1105 AB#1109 AB#1107

--- a/interfaces/PA-App/src/app/user-menu/user-menu.component.html
+++ b/interfaces/PA-App/src/app/user-menu/user-menu.component.html
@@ -11,7 +11,12 @@
     <ion-item button="true" disabled>
       {{ 'account.change-password'|translate}}
     </ion-item>
-    <ion-item button="true" disabled>
+    <ion-item button="true"
+              [disabled]="!isLoggedIn"
+              (click)="deletePrompt()"
+              detail="true"
+              detail-icon="log-out"
+    >
       {{ 'account.delete-digital-id'|translate}}
     </ion-item>
     <ion-button (click)="close()"
