Make the User-menu toggleable from 'outside'

--- a/interfaces/PA-App/src/app/tabs/tabs.page.html
+++ b/interfaces/PA-App/src/app/tabs/tabs.page.html
@@ -16,7 +16,7 @@
       <ion-label>{{ 'DEVICE'|translate }}</ion-label>
     </ion-tab-button>
 
-    <ion-fab-button *ngIf="!useLocalStorage"
+    <ion-fab-button *ngIf="userMenuShown"
                     size="small"
                     [color]="isLoggedIn ? 'success' : 'medium'"
                     [disabled]="!isLoggedIn"
