Use Custom-CSS-Properties to change colors of input-elements

--- a/interfaces/AW-App/src/app/app.scss
+++ b/interfaces/AW-App/src/app/app.scss
@@ -5,28 +5,10 @@
 // file can hold Sass mixins, functions, and placeholder classes to be imported
 // and used throughout the application.
 
-.debug--container {
-  position: relative;
-  margin: 1em;
-  color: var(--ion-color-medium-shade);
-
-  &[open] {
-    outline: 2px dashed;
-    padding: 1em;
-  }
-}
-.debug--toggle {
-  position: absolute;
-  top: -1.5em;
-  left: 0;
-  right: 0;
-}
-
-
-// ----------------------------------------------------------------------------
 
 // Override default styles to emphasize where to input
-ion-input .native-input,
-ion-textarea .native-textarea {
-  background-color: #DFE5FE !important;
+// Make an exception for 'native' inputs in 'items':
+*:not(ion-item) > ion-input,
+ion-textarea {
+  --background: #dfe5fe !important;
 }
