--- a/interfaces/PA-App/src/app/app.scss
+++ b/interfaces/PA-App/src/app/app.scss
@@ -17,7 +17,8 @@
 // ----------------------------------------------------------------------------
 
 // Override default styles to emphasize where to input
-ion-input .native-input,
-ion-textarea .native-textarea {
-  background-color: #DFE5FE !important;
+// Make an exception for 'native' inputs in 'items':
+*:not(ion-item) > ion-input,
+ion-textarea {
+  --background: #dfe5fe !important;
 }
