AB#1105 changed ion-icons in user-menu

--- a/interfaces/PA-App/src/app/user-menu/user-menu.component.html
+++ b/interfaces/PA-App/src/app/user-menu/user-menu.component.html
@@ -8,14 +8,18 @@
     >
       {{ 'account.logout'|translate}}
     </ion-item>
-    <ion-item button="true" disabled>
+    <ion-item button="true" 
+              disabled
+              detail="true"
+              detail-icon="key"
+    >
       {{ 'account.change-password'|translate}}
     </ion-item>
     <ion-item button="true"
               [disabled]="!isLoggedIn"
               (click)="deletePrompt()"
               detail="true"
-              detail-icon="log-out"
+              detail-icon="trash"
     >
       {{ 'account.delete-digital-id'|translate}}
     </ion-item>
