--- a/interfaces/PA-App/src/app/user-menu/user-menu.component.html
+++ b/interfaces/PA-App/src/app/user-menu/user-menu.component.html
@@ -6,14 +6,14 @@
               detail="true"
               detail-icon="log-out"
     >
-      {{ 'account.logout'|translate}}
+      {{ 'account.logout'|translate }}
     </ion-item>
     <ion-item button="true" 
               disabled
               detail="true"
               detail-icon="key"
     >
-      {{ 'account.change-password'|translate}}
+      {{ 'account.change-password'|translate }}
     </ion-item>
     <ion-item button="true"
               [disabled]="!isLoggedIn"
@@ -21,12 +21,12 @@
               detail="true"
               detail-icon="trash"
     >
-      {{ 'account.delete-digital-id'|translate}}
+      {{ 'account.delete-digital-id'|translate }}
     </ion-item>
     <ion-button (click)="close()"
                 expand="block"
     >
-      {{ 'account.close'|translate}}
+      {{ 'shared.close-button'|translate }}
     </ion-button>
   </ion-list>
 </ion-content>
