AB#1193 relationship connection vs fsp

--- a/interfaces/PA-App/src/app/personal-components/select-appointment/select-appointment.component.html
+++ b/interfaces/PA-App/src/app/personal-components/select-appointment/select-appointment.component.html
@@ -10,7 +10,9 @@
       </ion-button>
     </p>
   </dialogue-turn>
-  <dialogue-turn [actor]="program?.ngo">
+  <dialogue-turn [actor]="program?.ngo"
+                 isConnected="true"
+  >
     <p>
       {{ 'personal.select-appointment.select'|translate }}
     </p>
